--- a/web/www/src/components/Header/Header.module.css
+++ b/web/www/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 @value tokens: "../../styles/tokens.module.css";
-@value faded, fontBody from tokens;
+@value faded, fontBody, dark from tokens;
 
 .header {
     z-index: 5;
@@ -12,9 +12,6 @@
     align-items: center;
 
     padding: 3.5rem 8rem 0;
-}
-
-.logo {
 }
 
 .text { 
@@ -34,6 +31,7 @@
     letter-spacing: 0.475rem;
     font-size: 1.2rem;
     border: .1rem solid faded;
+    background-color: rgba(0,0,0, .7);
 }
 
 .tab:last-child {
